[gd_scene load_steps=5 format=2]

[ext_resource path="res://SceneHandler.gd" type="Script" id=1]
[ext_resource path="res://Scenes/UIScenes/MainMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Music/Ala Flair.ogg" type="AudioStream" id=3]
[ext_resource path="res://Assets/Sounds/select_002.ogg" type="AudioStream" id=4]

[node name="SceneHandler" type="Node"]
script = ExtResource( 1 )

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true
bus = "Music"

[node name="SoundButtonClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Sound"

[node name="MainMenu" parent="." instance=ExtResource( 2 )]
